--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-hacker
 title: Hacker theme
 description: Hacker is a theme for GitHub Pages.
-show_downloads: true
+show_downloads: false
 google_analytics:
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
